Update Spring version